Change action name

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Sync Tailscale ACLs"
+name: "Sync Tailscale ACLs - IS Fork"
 description: "Push changes to Tailscale and run ACL tests in CI"
 inputs:
   tailnet:
